--- a/categories/development-tools.toml
+++ b/categories/development-tools.toml
@@ -2,6 +2,8 @@ title       = "Development Tools"
 related     = ["text-editors"]
 
 [entry.colg-cli]
+crates_io_id = false
+repository_url = "https://github.com/clog-tool/clog-cli"
 
 [entry.bindgen]
 
