--- a/categories/operating-systems.toml
+++ b/categories/operating-systems.toml
@@ -4,4 +4,5 @@ related     = ["text-editors", "development-tools", "ide"]
 [entry.redox]
 crates_io_id = false
 repository_url = "https://github.com/redox-os/redox"
+homepage_url = "http://www.redox-os.org/"
 licence = "MIT"
