--- a/categories/cryptography.toml
+++ b/categories/cryptography.toml
@@ -5,6 +5,10 @@ related     = ["tls", "compression"]
 
 [entry.openssl]
 
+[entry.ring]
+crates_io_id = false
+repository_url = "https://github.com/briansmith/ring"
+
 [entry.rust-crypto]
 
 [entry.sodiumoxide]
