Added Diesel to ORM

--- a/categories/orm.toml
+++ b/categories/orm.toml
@@ -3,6 +3,8 @@ related     = ["databases", "database-drivers", "web-frameworks"]
 
 [entry.deuterium]
 
+[entry.diesel]
+
 [entry.rustorm]
 
 [entry.treasure]
