--- a/categories/terminal-utils.toml
+++ b/categories/terminal-utils.toml
@@ -2,3 +2,8 @@ title       = "Terminal Utilities"
 related     = ["text-editors", "development-tools", "ide", "cli-argument-parsers"]
 
 [entry.termsize]
+
+[entry.termion]
+crates_io_id = false
+repository_url = "https://github.com/ticki/termion"
+licence = "MIT"
