--- a/categories/parsers.toml
+++ b/categories/parsers.toml
@@ -1,4 +1,4 @@
-title       = "Parsing"
+title       = "Parsers"
 related     = ["csv-parsers", "text-editors", "development-tools", "ide"]
 
 [entry.lalrpop]
