Fix crates.io package for Iota editor. Closes #25.

--- a/categories/text-editors.toml
+++ b/categories/text-editors.toml
@@ -2,6 +2,7 @@ title       = "Text Editors"
 related     = ["development-tools", "ide"]
 
 [entry.iota]
+crates_io_id = "iota-editor"
 
 [entry.sodium]
 crates_io_id = false
