Add the Gotham web framework

--- a/categories/web-frameworks.toml
+++ b/categories/web-frameworks.toml
@@ -2,6 +2,8 @@ title       = "Web Frameworks"
 description = "Web frameworks in Rust"
 related     = ["http-servers", "ide", "text-editors"]
 
+[entry.gotham]
+
 [entry.conduit]
 
 [entry.iron]
