--- a/categories/testing.toml
+++ b/categories/testing.toml
@@ -9,3 +9,8 @@ related     = ["text-editors", "development-tools", "ide"]
 crates_io_id = false
 name = "afl"
 repository_url = "https://github.com/frewsxcv/afl.rs"
+
+[entry.polish]
+crates_io_id = false
+name = "polish"
+repository_url = "https://github.com/Alkass/polish"
