--- a/categories/cargo-subcommands.toml
+++ b/categories/cargo-subcommands.toml
@@ -25,6 +25,8 @@ repository_url = "https://github.com/killercup/cargo-edit"
 
 [entry.cargo-info]
 
+[entry.cargo-make]
+
 [entry.cargo-multi]
 
 [entry.cargo-outdated]
